syntax = "proto2";

import "google/protobuf/descriptor.proto";

option java_package = "io.github.viakiba.hinx.generate.message";
option java_outer_classname = "Options";

extend google.protobuf.MessageOptions {
  optional int32 msgId = 54321;
}

